@@ -24,6 +24,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            testCoverageEnabled = true
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -36,9 +39,11 @@ android {
     buildFeatures {
         viewBinding = true
     }
-    composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.4.32'
+
+    testOptions {
+        unitTests.all {
+            jvmArgs '-Djdk.attach.allowAttachSelf=true'
+        }
     }
 }
 
@@ -46,8 +51,8 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'androidx.annotation:annotation:1.2.0'
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
@@ -61,10 +66,17 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    testImplementation "io.mockk:mockk:1.9.3"
-    testImplementation 'junit:junit:4.+'
+//    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
 
-    androidTestImplementation "io.mockk:mockk-android:{version}"
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "io.mockk:mockk:1.11.0"
+    //    testImplementation 'org.mockito:mockito-core:3.9.0'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "io.mockk:mockk-android:1.11.0"
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
